"""
Application Layer: Automatic Scan Service

Responsibility:
    Orchestrates automated scan patterns (serpentine, comb, step, fly).
    Manages scan execution from configuration to completion.

Rationale:
    Automated scans follow predefined patterns requiring coordination
    of motion planning, acquisition timing, and data aggregation.

Design:
    - Stateless service
    - Delegates pattern generation to domain
    - Coordinates motion and acquisition based on scan mode
"""
from typing import Any, Dict
from uuid import UUID


class AutomaticScanService:
    """Service for automated scan operations."""
    
    def __init__(self):
        """Initialize automatic scan service with required dependencies."""
        pass
    
    def configure_scan_pattern(self, config: Dict[str, Any]) -> Any:
        """
        Configure scan pattern from user parameters.
        
        Responsibility:
            Validate and create scan plan from configuration.
        
        Rationale:
            User provides high-level config (bounds, step size, pattern type).
            Service translates to executable scan plan.
        
        Design:
            - Validate bounds and step size
            - Generate point sequence based on pattern
            - Return scan plan ready for execution
        
        Args:
            config: Scan configuration (bounds, step_size, pattern_type)
            
        Returns:
            ScanPlan with ordered positions
        """
        pass
    
    def execute_serpentine_scan(self, bounds: Dict[str, float], step_size: float) -> UUID:
        """
        Execute serpentine (snake) pattern scan.
        
        Responsibility:
            Run scan following serpentine path through grid.
        
        Rationale:
            Serpentine minimizes motion time by reversing direction each row.
        
        Design:
            - Generate serpentine pattern
            - Execute step-by-step acquisition
            - Return scan ID for tracking
        
        Args:
            bounds: {'x_min', 'x_max', 'y_min', 'y_max'} in mm
            step_size: Distance between points in mm
            
        Returns:
            UUID of created scan
        """
        pass
    
    def execute_comb_scan(self, bounds: Dict[str, float], step_size: float) -> UUID:
        """
        Execute comb pattern scan.
        
        Responsibility:
            Run scan following comb path (unidirectional rows).
        
        Rationale:
            Comb pattern ensures consistent scan direction per row.
        
        Design:
            - Generate comb pattern
            - Execute with return to start of each row
            - Return scan ID
        
        Args:
            bounds: Scan area boundaries
            step_size: Distance between points
            
        Returns:
            UUID of created scan
        """
        pass
    
    def execute_step_scan(self, scan_plan: Any, mode: str) -> UUID:
        """
        Execute step scan (motors stop at each point).
        
        Responsibility:
            Run scan with discrete stop-and-acquire at each point.
        
        Rationale:
            Step scans provide maximum accuracy by eliminating motion blur.
        
        Design:
            - Move to position
            - Wait for stabilization
            - Acquire
            - Repeat for all points
        
        Args:
            scan_plan: Pre-configured scan plan
            mode: Scan mode configuration
            
        Returns:
            UUID of created scan
        """
        pass
    
    def execute_fly_scan(self, scan_plan: Any, speed: float) -> UUID:
        """
        Execute fly scan (continuous motion with on-the-fly acquisition).
        
        Responsibility:
            Run scan with continuous motor motion and synchronized acquisition.
        
        Rationale:
            Fly scans are faster but require precise timing coordination.
        
        Design:
            - Set motor speed
            - Start continuous motion
            - Trigger acquisitions at calculated positions
            - Return scan ID
        
        Args:
            scan_plan: Pre-configured scan plan
            speed: Motor speed in mm/s
            
        Returns:
            UUID of created scan
        """
        pass
