"""
Application Layer: Stability Acquisition Service

Responsibility:
    Manages time-series acquisitions at fixed position.
    Monitors signal stability and drift over time.

Rationale:
    Stability measurements require continuous acquisition
    without motion, tracking temporal variations.

Design:
    - Time-based acquisition control
    - Continuous sampling at fixed position
    - Aggregates time-series data
"""
from typing import Any, Optional
from uuid import UUID
from datetime import datetime


class StabilityAcquisitionService:
    """Service for stability/time-series acquisitions."""
    
    def __init__(self):
        """Initialize stability acquisition service with required dependencies."""
        pass
    
    def start_timed_acquisition(self, start_time: datetime, end_time: Optional[datetime] = None) -> UUID:
        """
        Start time-based acquisition.
        
        Responsibility:
            Begin continuous acquisition at scheduled time.
        
        Rationale:
            User may want to schedule acquisition for specific time window.
        
        Design:
            - Schedule start at specified time
            - Run until end_time or manual stop
            - Return acquisition ID
        
        Args:
            start_time: When to begin acquisition
            end_time: When to stop (None = manual stop required)
            
        Returns:
            UUID of acquisition for tracking/stopping
        """
        pass
    
    def stop_acquisition(self, acquisition_id: UUID) -> None:
        """
        Stop ongoing acquisition.
        
        Responsibility:
            Terminate acquisition and finalize data.
        
        Rationale:
            User needs manual control to stop open-ended acquisitions.
        
        Design:
            - Signal acquisition to stop
            - Wait for current sample to complete
            - Finalize and persist data
        
        Args:
            acquisition_id: UUID of acquisition to stop
        """
        pass
    
    def acquire_for_duration(self, duration: float, sampling_rate: float) -> UUID:
        """
        Acquire for fixed duration.
        
        Responsibility:
            Run time-series acquisition for specified duration.
        
        Rationale:
            Common use case: acquire for N seconds at M Hz.
        
        Design:
            - Calculate number of samples
            - Start acquisition
            - Auto-stop after duration
            - Return acquisition ID
        
        Args:
            duration: Acquisition duration in seconds
            sampling_rate: Samples per second (Hz)
            
        Returns:
            UUID of acquisition
        """
        pass
