"""
Application Layer: Parameter Management Service

Responsibility:
    Manages acquisition and excitation parameters.
    Provides parameter update and snapshot functionality.

Rationale:
    Parameters change during experiments and need tracking.
    Service centralizes parameter state management.

Design:
    - Maintains current parameter state
    - Validates parameter updates
    - Creates parameter snapshots for reproducibility
"""
from typing import Any, Dict


class ParameterManagementService:
    """Service for parameter management."""
    
    def __init__(self):
        """Initialize parameter management service with required dependencies."""
        pass
    
    def update_excitation_params(self, params: Dict[str, Any]) -> None:
        """
        Update excitation parameters.
        
        Responsibility:
            Update field excitation configuration.
        
        Rationale:
            User may change excitation mode, phases during experiment.
        
        Design:
            - Validate parameters
            - Update hardware configuration
            - Store current state
        
        Args:
            params: Excitation parameters (mode, phases, etc.)
        """
        pass
    
    def update_acquisition_params(self, params: Dict[str, Any]) -> None:
        """
        Update acquisition parameters.
        
        Responsibility:
            Update measurement acquisition settings.
        
        Rationale:
            User may adjust frequency, integration time, etc.
        
        Design:
            - Validate parameters
            - Update acquisition hardware
            - Store current state
        
        Args:
            params: Acquisition parameters (frequency, integration_time, etc.)
        """
        pass
    
    def snapshot_parameters(self) -> Any:
        """
        Create snapshot of current parameters.
        
        Responsibility:
            Capture complete parameter state.
        
        Rationale:
            Need parameter record for reproducibility and metadata.
        
        Design:
            - Collect all current parameters
            - Create immutable snapshot
            - Return for storage with data
        
        Returns:
            ParameterSnapshot with all current settings
        """
        pass
