"""
Application Layer: Scan Configuration Service

Responsibility:
    Manages scan configuration creation, validation, and templates.
    Provides scan pattern configuration interface.

Rationale:
    Scan configurations are complex and need validation.
    Service centralizes configuration logic and template management.

Design:
    - Validates scan parameters before execution
    - Manages configuration templates for reuse
    - Creates executable scan configurations
"""
from typing import Any
from uuid import UUID


class ScanConfigurationService:
    """Service for scan configuration management."""
    
    def __init__(self):
        """Initialize scan configuration service with required dependencies."""
        pass
    
    def create_scan_configuration(self, scan_type: str, parameters: dict) -> Any:
        """
        Create scan configuration from parameters.
        
        Responsibility:
            Build validated scan configuration.
        
        Rationale:
            User provides parameters, service creates valid configuration.
        
        Design:
            - Validate parameters for scan type
            - Create configuration object
            - Return ready for execution
        
        Args:
            scan_type: Type of scan ('serpentine', 'comb', etc.)
            parameters: Scan parameters (bounds, step_size, etc.)
            
        Returns:
            ScanConfiguration ready for execution
        """
        pass
    
    def validate_scan_pattern(self, config: Any) -> Any:
        """
        Validate scan pattern configuration.
        
        Responsibility:
            Check configuration validity before execution.
        
        Rationale:
            Catch configuration errors before starting scan.
        
        Design:
            - Check bounds are within workspace
            - Validate step size is reasonable
            - Check pattern generates valid points
            - Return validation result
        
        Args:
            config: Scan configuration to validate
            
        Returns:
            ValidationResult with status and errors
        """
        pass
    
    def save_scan_template(self, config: Any, name: str) -> UUID:
        """
        Save configuration as reusable template.
        
        Responsibility:
            Persist configuration for future use.
        
        Rationale:
            Users repeat similar scans, templates save time.
        
        Design:
            - Serialize configuration
            - Store with name
            - Return template ID
        
        Args:
            config: Configuration to save
            name: Template name
            
        Returns:
            UUID of saved template
        """
        pass
