"""
Application Layer: Data Aggregation Service

Responsibility:
    Aggregates measurements into structured scan data.
    Links measurements to positions and organizes by scan type.

Rationale:
    Raw measurements need structuring for persistence and analysis.
    Service provides consistent data organization across scan types.

Design:
    - Transforms measurement lists to structured format
    - Groups by position for spatial scans
    - Handles different scan type requirements
"""
from typing import Any, List, Dict


class DataAggregationService:
    """Service for measurement data aggregation."""
    
    def __init__(self):
        """Initialize data aggregation service with required dependencies."""
        pass
    
    def aggregate_measurements(self, measurements: List[Any], scan_type: str) -> Any:
        """
        Aggregate measurements into structured scan data.
        
        Responsibility:
            Transform measurement list to structured format.
        
        Rationale:
            Different scan types require different data structures.
        
        Design:
            - Group measurements by scan type logic
            - Create StructuredScanData
            - Return ready for persistence
        
        Args:
            measurements: List of measurement points
            scan_type: Type of scan ('manual', 'serpentine', etc.)
            
        Returns:
            StructuredScanData
        """
        pass
    
    def structure_acquisition_data(self, raw_data: Any) -> Any:
        """
        Structure raw acquisition data.
        
        Responsibility:
            Convert raw hardware data to domain format.
        
        Rationale:
            Hardware provides unstructured data needing organization.
        
        Design:
            - Parse raw data
            - Create domain objects
            - Return structured dataset
        
        Args:
            raw_data: Raw data from hardware
            
        Returns:
            AcquisitionDataset
        """
        pass
    
    def link_measurements_to_positions(self, measurements: List[Any], positions: List[tuple]) -> Dict:
        """
        Link measurements to their spatial positions.
        
        Responsibility:
            Create position-to-measurement mapping.
        
        Rationale:
            Spatial analysis requires position-indexed data.
        
        Design:
            - Zip measurements with positions
            - Create dictionary mapping
            - Return spatial map
        
        Args:
            measurements: List of measurements
            positions: List of (x, y) positions
            
        Returns:
            Dict mapping positions to measurements
        """
        pass
