"""
Application Layer: Reference Measurement Service

Responsibility:
    Manages reference measurements for relative field calculations.
    Coordinates reference acquisition and relative measurement computation.

Rationale:
    Scattering measurements require reference field (incident field without object).
    Service manages reference lifecycle and relative calculations.

Design:
    - Stores current reference measurement
    - Validates reference against acquisition parameters
    - Computes relative measurements on demand
"""
from typing import Any
from uuid import UUID


class ReferenceMeasurementService:
    """Service for reference measurement management."""
    
    def __init__(self):
        """Initialize reference measurement service with required dependencies."""
        pass
    
    def set_as_reference(self, measurement: Any, context: dict) -> UUID:
        """
        Set measurement as reference for future comparisons.
        
        Responsibility:
            Store measurement as reference field.
        
        Rationale:
            User acquires reference once, then uses for all scan points.
        
        Design:
            - Validate measurement quality
            - Store with acquisition context
            - Return reference ID
        
        Args:
            measurement: Voltage measurement to use as reference
            context: Acquisition parameters and metadata
            
        Returns:
            UUID of stored reference
        """
        pass
    
    def get_reference_measurement(self) -> Any:
        """
        Retrieve current reference measurement.
        
        Responsibility:
            Provide access to active reference.
        
        Rationale:
            Other services need reference for calculations.
        
        Design:
            - Return current reference
            - Raise error if no reference set
        
        Returns:
            Current ReferenceMeasurement
        """
        pass
    
    def compute_relative_measurement(self, measurement: Any) -> Any:
        """
        Compute relative measurement against reference.
        
        Responsibility:
            Calculate scattered field (total - reference).
        
        Rationale:
            Core calculation for scattering measurements.
        
        Design:
            - Get current reference
            - Validate parameters match
            - Compute scattered field
            - Return relative measurement
        
        Args:
            measurement: Total field measurement
            
        Returns:
            RelativeMeasurement with scattered field
        """
        pass
